--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="col-lg-8 mx-auto p-4 py-md-5">
     <header class="pb-3 mb-5 border-bottom">
       <h1>Louis Tremblay Thibault</h1>
-      <h6>Blockchain research engineer, Zama</h6>
+      <h6>Research engineer, Zama</h6>
       <h6>M. Sc. student (on leave), DIRO, Université de Montréal</h6>
     </header>
 
@@ -84,9 +84,8 @@
         <h3>About me</h3>
       </a>
       <p>
-        I'm a blockchain research engineer at <a href="https://www.zama.ai/">Zama</a> working on privacy preserving
-        smart
-        contracts using fully homomorphic encryption.
+        I'm a Research engineer at <a href="https://www.zama.ai/">Zama</a> working on verifiable private 
+        computation and privacy-preserving blockchain systems.
       </p>
       <p>
         I also study theoretical computer science at Université de Montréal under the supervision of Prof. <a
