--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <h3>About me</h3>
       </a>
       <p>
-        I'm a Research engineer at <a href="https://www.zama.ai/">Zama</a> working on verifiable private 
+        I'm a research engineer at <a href="https://www.zama.ai/">Zama</a> working on verifiable private 
         computation and privacy-preserving blockchain systems.
       </p>
       <p>
