--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <div class="col-lg-8 mx-auto p-4 py-md-5">
     <header class="pb-3 mb-5 border-bottom">
       <h1>Louis Tremblay Thibault</h1>
-      <h6>Research engineer, Zama</h6>
-      <h6>M. Sc. student (on leave), DIRO, Université de Montréal</h6>
+      <h6>Cryptography researcher, Zama</h6>
+      <h6>Ph. D. student, ÉTS Montréal</h6>
     </header>
 
     <main>
@@ -84,16 +84,15 @@
         <h3>About me</h3>
       </a>
       <p>
-        I'm a research engineer at <a href="https://www.zama.ai/">Zama</a> working on verifiable private 
+        I'm a researcher at <a href="https://www.zama.ai/">Zama</a> working on verifiable private 
         computation and privacy-preserving blockchain systems.
       </p>
       <p>
-        I also study theoretical computer science at Université de Montréal under the supervision of Prof. <a
-          href="http://www.iro.umontreal.ca/~ahafid/">Abdelhakim Senhaji Hafid</a>.
+        I'm also a Ph. D. student at École de Technologie Supérieure under the supervision of Prof. <a
+          href="https://aivodji.github.io/">Ulrich Aïvodji</a>.
       </p>
       <p>
-        <strong>Research interests:</strong> design, analysis and implementation of blockchain systems; succinctly
-        verifiable computation; cryptography.
+        <strong>Research interests:</strong> verifiable computation; cryptography; design, analysis and implementation of blockchain systems.
       </p>
 
       <hr class="col-3 col-md-3 mb-5">
@@ -104,8 +103,14 @@
         </a>
         <p>
           <em>
-            louis.tremblay.thibault@{umontreal.ca, gmail.com}
-          </em>
+            <script type="text/javascript">
+              const emailriddlerarray=[108,111,117,105,115,46,116,114,101,109,98,108,97,121,46,116,104,105,98,97,117,108,116,64,103,109,97,105,108,46,99,111,109]
+              var email = '' 
+              for (var i = 0; i < emailriddlerarray.length; i++)
+               email += String.fromCharCode(emailriddlerarray[i])
+              document.write(email)
+              </script>          
+            </em>
         </p>
         <ul class="icon-list ps-0">
           <!-- <li>
