--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div class="col-lg-8 mx-auto p-4 py-md-5">
-    <img src="bg.png" style="width: 175px; image-resolution: 300dpi; float: left; padding-right: 10px;" alt="">
+    <img src="bg.png" style="width: 175px; image-resolution: 300dpi; float: left; padding-right: 10px;" alt="Louis Tremblay Thibault">
     <header class="pb-3 mb-5 border-bottom" style="padding-top: 3.5rem; padding-bottom: 6rem !important;">
       <h1>Louis Tremblay Thibault</h1>
       <h6>Cryptography researcher, Zama</h6>
